# tb-yt-uploader

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/: build.yml
.github/workflows/: build.yml
app/: config.py  main.py  worker.py
app/celery/: __init__.py  worker.py
app/celery/tasks/: all.py
app/handlers/: __init__.py  audio2video.py  commands.py  convert.py
app/utils/: a2v.py  cred.py  yt_uploader.py
app/web/: __init__.py  auth.py
docker/: docker-compose.dev.yml  docker-compose.yml
ptb/: Dockerfile  bot.py  config.py  pyproject.toml
ptb/handlers/: __init__.py  commands.py  convert.py
ptb/scripts/: start-bot.sh
ptb/utils/: a2v.py  common.py  cred.py  service.py  yt_uploader.py
scripts/: start-bot-dev.sh  start-bot.sh  start-celery-beat.sh  start-celery-worker.sh  start-web.sh  start-worker.sh
web/: .dockerignore  Dockerfile  celerybeat-schedule  logging.conf  main.py  pyproject.toml
web/app/: __init__.py  auth.py  config.py  core.py  frontend.py  models.py  tasks.py
web/app/utils/: a2v.py  cred.py  gmail.py  yt_uploader.py
web/html/: index.html  privacy_policy.html  tos.html
web/scripts/: start-celery.sh  start-web.sh
